--- a/css/app.css
+++ b/css/app.css
@@ -44,4 +44,32 @@ ul {
 	right: 0;
 	transform: translateY(-50%);
 	color: tomato;
+	cursor: pointer;
+}
+
+
+.circles {
+	position: absolute;
+	bottom: 5px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	gap: 5px;
+}
+
+.circles__dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: cyan;
+	border-radius: 50%;
+	opacity: 0.7;
+
+
+}
+
+.circle__active {
+	opacity: 1;
+	background-color: blueviolet;
 }
